Use Path objects instead of Strings and Files for i/o handling.