@@ -1,22 +1,5 @@
 package de.gurkenlabs.litiengine.resources;
 
-import java.awt.Font;
-import java.awt.image.BufferedImage;
-import java.io.BufferedInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Scanner;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
 import de.gurkenlabs.litiengine.environment.tilemap.IMap;
 import de.gurkenlabs.litiengine.environment.tilemap.xml.Blueprint;
 import de.gurkenlabs.litiengine.environment.tilemap.xml.Tileset;
@@ -25,15 +8,33 @@ import de.gurkenlabs.litiengine.graphics.emitters.xml.EmitterData;
 import de.gurkenlabs.litiengine.graphics.emitters.xml.EmitterLoader;
 import de.gurkenlabs.litiengine.sound.Sound;
 import de.gurkenlabs.litiengine.util.TimeUtilities;
+import java.awt.Font;
+import java.awt.image.BufferedImage;
+import java.io.BufferedInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Scanner;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
- * This class is the engines entry point for accessing any kind of resources. A resource is any non-executable data that
- * is deployed with your game. The {@code Resources} class provides access to types of {@code ResourcesContainers} and
- * is used by different (loading) mechanisms to make resources available during runtime.
+ * This class is the engines entry point for accessing any kind of resources. A resource is any non-executable data that is deployed with your game.
+ * The {@code Resources} class provides access to types of {@code ResourcesContainers} and is used by different (loading) mechanisms to make resources
+ * available during runtime.
  * <p>
  * The LITIENGINE supports a variety of different resource types, including:
  * </p>
- * 
+ *
  * <ul>
  * <li>images</li>
  * <li>fonts</li>
@@ -42,19 +43,19 @@ import de.gurkenlabs.litiengine.util.TimeUtilities;
  * <li>spritesheets</li>
  * <li>sounds</li>
  * </ul>
- * 
+ *
  * @see ResourcesContainer
  */
 public final class Resources {
   private static final Logger log = Logger.getLogger(Resources.class.getName());
-  private static Fonts fonts = new Fonts();
-  private static Sounds sounds = new Sounds();
-  private static Maps maps = new Maps();
-  private static Tilesets tilesets = new Tilesets();
-  private static Strings strings = new Strings();
-  private static Images images = new Images();
-  private static Spritesheets spritesheets = new Spritesheets();
-  private static Blueprints blueprints = new Blueprints();
+  private static final Fonts fonts = new Fonts();
+  private static final Sounds sounds = new Sounds();
+  private static final Maps maps = new Maps();
+  private static final Tilesets tilesets = new Tilesets();
+  private static final Strings strings = new Strings();
+  private static final Images images = new Images();
+  private static final Spritesheets spritesheets = new Spritesheets();
+  private static final Blueprints blueprints = new Blueprints();
 
   private Resources() {
     throw new UnsupportedOperationException();
@@ -62,9 +63,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code Font} resources.
-   * 
+   *
    * @return The Font resource container.
-   * 
    * @see Font
    */
   public static Fonts fonts() {
@@ -73,9 +73,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code Sound} resources.
-   * 
+   *
    * @return The Sound resource container.
-   * 
    * @see Sound
    */
   public static Sounds sounds() {
@@ -84,9 +83,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code IMap} resources.
-   * 
+   *
    * @return The IMap resource container.
-   * 
    * @see IMap
    */
   public static Maps maps() {
@@ -94,12 +92,10 @@ public final class Resources {
   }
 
   /**
-   * Gets the container that manages {@code Tileset} resources.<br>
-   * This implementation uses raw {@code Tileset}s, to avoid problems with {@code Tileset} methods that aren't in the
-   * {@code ITileset} interface.
-   * 
+   * Gets the container that manages {@code Tileset} resources.<br> This implementation uses raw {@code Tileset}s, to avoid problems with
+   * {@code Tileset} methods that aren't in the {@code ITileset} interface.
+   *
    * @return The Tileset resource container.
-   * 
    * @see Tileset
    */
   public static Tilesets tilesets() {
@@ -107,9 +103,8 @@ public final class Resources {
   }
 
   /**
-   * Gets a container that manages {@code String} resources.<br>
-   * This instance can be used to access localizable string from a ".properties" file.
-   * 
+   * Gets a container that manages {@code String} resources.<br> This instance can be used to access localizable string from a ".properties" file.
+   *
    * @return The String resource container.
    */
   public static Strings strings() {
@@ -118,9 +113,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code BufferedImage} resources.
-   * 
+   *
    * @return The BufferedImage resource container.
-   * 
    * @see BufferedImage
    */
   public static Images images() {
@@ -129,9 +123,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code Spritesheet} resources.
-   * 
+   *
    * @return The Spritesheet resource container.
-   * 
    * @see Spritesheet
    */
   public static Spritesheets spritesheets() {
@@ -140,9 +133,8 @@ public final class Resources {
 
   /**
    * Gets the container that manages {@code Blueprint} resources.
-   * 
+   *
    * @return The Blueprint resource container.
-   * 
    * @see Blueprint
    */
   public static Blueprints blueprints() {
@@ -150,22 +142,20 @@ public final class Resources {
   }
 
   /**
-   * Load {@code Spritesheets}, {@code Tilesets} and {@code Maps} from a game resource file created with the utiLITI
-   * editor. After loading, these resources can be accessed via this API (e.g. {@code Resources.maps().get("mapname")}.
-   * 
-   * @param gameResourceFile
-   *          The file name of the game resource file
+   * Load {@code Spritesheets}, {@code Tilesets} and {@code Maps} from a game resource file created with the utiLITI editor. After loading, these
+   * resources can be accessed via this API (e.g. {@code Resources.maps().get("mapname")}).
+   *
+   * @param gameResourceFile The file name of the game resource file
    */
   public static void load(final String gameResourceFile) {
     load(getLocation(gameResourceFile));
   }
 
   /**
-   * Load {@code Spritesheets}, {@code Tilesets} and {@code Maps} from a game resource file created with the utiLITI
-   * editor. After loading, these resources can be accessed via this API (e.g. {@code Resources.maps().get("mapname")}.
-   * 
-   * @param gameResourceFile
-   *          The URL to the game resource file
+   * Load {@code Spritesheets}, {@code Tilesets} and {@code Maps} from a game resource file created with the utiLITI editor. After loading, these
+   * resources can be accessed via this API (e.g. {@code Resources.maps().get("mapname")}).
+   *
+   * @param gameResourceFile The URL to the game resource file
    */
   public static void load(final URL gameResourceFile) {
     final long loadStart = System.nanoTime();
@@ -234,9 +224,8 @@ public final class Resources {
 
   /**
    * Gets the specified file as InputStream from either a resource folder or the file system.
-   * 
-   * @param file
-   *          The path to the file.
+   *
+   * @param file The path to the file.
    * @return The contents of the specified file as {@code InputStream}.
    * @see Resources
    */
@@ -244,11 +233,14 @@ public final class Resources {
     return get(getLocation(file));
   }
 
+  public static InputStream get(Path file) throws IOException {
+    return Files.newInputStream(file, StandardOpenOption.READ);
+  }
+
   /**
    * Gets the specified file as InputStream from either a resource folder or the file system.
-   * 
-   * @param file
-   *          The path to the file.
+   *
+   * @param file The path to the file.
    * @return The contents of the specified file as {@code InputStream}.
    * @see Resources
    */
@@ -262,11 +254,10 @@ public final class Resources {
   }
 
   /**
-   * Reads the specified file as String from either a resource folder or the file system.<br>
-   * Since no {@code Charset} is specified with this overload, the implementation uses UTF-8 by default.
-   * 
-   * @param file
-   *          The path to the file.
+   * Reads the specified file as String from either a resource folder or the file system.<br> Since no {@code Charset} is specified with this
+   * overload, the implementation uses UTF-8 by default.
+   *
+   * @param file The path to the file.
    * @return The contents of the specified file as {@code String}
    */
   public static String read(String file) {
@@ -275,11 +266,9 @@ public final class Resources {
 
   /**
    * Reads the specified file as String from either a resource folder or the file system.<br>
-   * 
-   * @param file
-   *          The path to the file.
-   * @param charset
-   *          The charset that is used to read the String from the file.
+   *
+   * @param file    The path to the file.
+   * @param charset The charset that is used to read the String from the file.
    * @return The contents of the specified file as {@code String}
    */
   public static String read(String file, Charset charset) {
@@ -292,11 +281,10 @@ public final class Resources {
   }
 
   /**
-   * Reads the specified file as String from either a resource folder or the file system.<br>
-   * Since no {@code Charset} is specified with this overload, the implementation uses UTF-8 by default.
-   * 
-   * @param file
-   *          The path to the file.
+   * Reads the specified file as String from either a resource folder or the file system.<br> Since no {@code Charset} is specified with this
+   * overload, the implementation uses UTF-8 by default.
+   *
+   * @param file The path to the file.
    * @return The contents of the specified file as {@code String}
    */
   public static String read(URL file) {
@@ -305,15 +293,13 @@ public final class Resources {
 
   /**
    * Reads the specified file as String from either a resource folder or the file system.<br>
-   * 
-   * @param file
-   *          The path to the file.
-   * @param charset
-   *          The charset that is used to read the String from the file.
+   *
+   * @param file    The path to the file.
+   * @param charset The charset that is used to read the String from the file.
    * @return The contents of the specified file as {@code String}
    */
   public static String read(URL file, Charset charset) {
-    try (Scanner scanner = new Scanner(file.openStream(), charset.toString())) {
+    try (Scanner scanner = new Scanner(file.openStream(), charset)) {
       scanner.useDelimiter("\\A");
       return scanner.hasNext() ? scanner.next() : null;
     } catch (IOException e) {
@@ -340,13 +326,17 @@ public final class Resources {
       return fromClass;
     }
     try {
-      return new URL(name);
+      return Path.of(name).toUri().toURL();
     } catch (MalformedURLException e) {
-      try {
-        return (new File(name)).toURI().toURL();
-      } catch (MalformedURLException e1) {
-        return null;
-      }
+      return null;
+    }
+  }
+
+  public static URL getLocation(Path path) {
+    try {
+      return path.toUri().toURL();
+    } catch (MalformedURLException e) {
+      return null;
     }
   }
 
